[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statbot-common"
version = "0.6.1"
description = "Common utilities for statistical analysis of market data, including volatility and data windowing."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name="Alec", email="alec@someemail.com" } ] 

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = "src" 